--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,54 @@
-tqdm
-requests
-argparse
-Shimmy==2.0.0
-gymnasium==1.1.1
+absl-py==2.2.2
+attrs==25.3.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+cloudpickle==3.1.1
+dm-env==1.6
+dm-tree==0.1.9
 dm_control==1.0.28
+etils==1.12.2
+Farama-Notifications==0.0.4
+filelock==3.18.0
+fsspec==2025.3.2
+glfw==2.9.0
+gymnasium==1.1.1
+idna==3.10
 imageio==2.37.0
+importlib_resources==6.5.2
+Jinja2==3.1.6
+labmaze==1.0.6
+lxml==5.4.0
+MarkupSafe==3.0.2
+mpmath==1.3.0
+mujoco==3.3.2
+networkx==3.4.2
 numpy==2.2.5
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+pillow==11.2.1
+protobuf==6.30.2
+PyOpenGL==3.1.9
+pyparsing==3.2.3
+requests==2.32.3
+scipy==1.15.2
+Shimmy==2.0.0
+sympy==1.14.0
+torch==2.7.0
+tqdm==4.67.1
+triton==3.3.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+wrapt==1.17.2
+zipp==3.21.0
